--- a/CodeProject/package.json
+++ b/CodeProject/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start-node": "node ./bin/www",
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
+    "connect-mongo": "^3.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.7.12",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.0",
+    "zxcvbn": "^4.4.2"
   }
 }
